Add customer provider favorites
